# spirv-simulator

./: .gitmodules  AGENTS.md  CMakeLists.txt  README.md  main.cpp  main_memory_flag_tracker.cpp  main_opcode_checker.cpp  spirv_simulator.cpp
cmake/toolchain/: linux_arm.cmake  linux_arm64.cmake  linux_x86_32.cmake
framework/: CMakeLists.txt  memory_flag_tracker.hpp  spirv_simulator.cpp  spirv_simulator.hpp  spirv_simulator_exceptions.hpp  util.hpp
test/: CMakeLists.txt  arithmetic_test.cpp  declaration_test.cpp  misc_test.cpp  testing_common.cpp  testing_common.hpp
test_shaders/: aztec_ruins_shader_17.spv  aztec_ruins_shader_30.spv  aztec_ruins_shader_36.spv  aztec_ruins_shader_4.spv  aztec_ruins_shader_8.spv  aztec_ruins_shader_86.spv  cooperative_matrix_integer_arithmetic.comp  cooperative_matrix_integer_arithmetic.spv  point_transform_cooperative_matrix.comp  point_transform_cooperative_matrix.spv  sample_16bit_arithmetic_shader_0.spv  sample_terrain_tessellation_0.spv  vulkan_cooperative_matrix.spv  vulkan_cooperative_matrix_math.spv
